# deep-research

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
deep_research/: __init__.py  agent_runner.py  cli.py  client.py  config.py  llm.py  log.py  middleware.py  utils.py  workflow.py
deep_research/agents/: __init__.py  compressor.py  critic.py  gap_analyzer.py  github_research.py  outline.py  query_refiner.py  report.py  research.py  supervisor.py
deep_research/executors/: __init__.py  judge.py  output.py  start.py
deep_research/models/: __init__.py  state.py
deep_research/tools/: __init__.py  extract.py  fetch.py  github_read.py  github_search.py  github_trending.py  hackernews.py  provider.py  reddit.py  registry.py  rss.py  search.py  youtube.py
deep_research/workflow/: __init__.py  deepen.py  executors.py  output_executor.py  pipeline.py  pipeline_steps.py  report_executor.py  research_executor.py  start_executor.py
docs/superpowers/specs/: 2026-04-29-structured-outputs-providers-design.md
