[project]
name = "deep-research"
version = "0.2.0"
description = "Deep Research Agent — multi-round iterative web research powered by OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv",
    "click",
    "ddgs",
    "httpx",
    "trafilatura",
]

[project.scripts]
deep-research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
