[project]
name = "deep-research"
version = "0.2.0"
description = "Deep Research Agent — multi-round iterative web research powered by OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "click",
    "ddgs",
    "httpx",
    "trafilatura",
    "agent-framework>=1.2.0",
    "agent-framework-openai>=1.2.0",
]

[project.scripts]
deep-research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
