[project]
name = "deep-research"
version = "0.2.0"
description = "Deep Research Agent — multi-round iterative web research powered by OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "ddgs",
    "httpx",
    "trafilatura",
    "agent-framework>=1.2.0",
    "agent-framework-openai>=1.2.0",
    "agent-framework-devui>=1.0.0b260424",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tavily-python>=0.7.24",
]

[project.scripts]
deep-research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
